--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -19,7 +19,7 @@
  $1 - Typography & Colour
 ------------------------------------------------------------------------------*/
 body {
-  background: #ececec;
+  background: white;
   color: #262626;
   font-family: "adagio-slab-medium", serif;
   font-size: 16.18px;
@@ -75,16 +75,19 @@ img {
   #masthead h1 {
     font-size: 3.2em;
     color: black;
-    padding: 0; }
+    padding: 0;
+    margin: 0; }
   #masthead h2 {
     color: black;
-    text-transform: lowercase; }
+    text-transform: lowercase;
+    margin: 0;
+    padding: 0; }
 
 header {
   overflow: hidden;
-  padding: 5px; }
+  padding: 20px; }
   header h1 {
-    font-size: 2.4rem;
+    font-size: 24.27px;
     float: left;
     padding: 0.025em 0; }
     header h1 a {
@@ -94,18 +97,13 @@ header {
         text-decoration: none; }
   header .menu {
     font-family: "adagio-slab-medium", serif;
-    font-size: 1.3rem;
-    float: right;
-    padding: 20px; }
+    font-size: 16.18px;
+    float: right; }
     header .menu > li {
-      display: inline-block;
-      font-size: 1.3em; }
+      display: inline-block; }
       header .menu > li a {
         color: black;
         padding: 0.5em 1em; }
-
-#header-wrapper {
-  padding: 20px; }
 
 /*------------------------------------------------------------------------------
  $3 - Structure
@@ -119,43 +117,6 @@ header {
   position: relative;
   top: 800px;
   z-index: 2; }
-  #main .thumbnail {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    background: none;
-    border: none;
-    margin: 0;
-    overflow: hidden;
-    padding: 5px;
-    position: relative;
-    width: 100%; }
-    #main .thumbnail .title {
-      color: #fff;
-      display: block;
-      font-family: "adagio-slab-black", serif;
-      font-size: 1.6em;
-      font-weight: 700;
-      left: 0;
-      line-height: 1.25em;
-      height: 100%;
-      padding: 15%;
-      position: absolute;
-      text-align: center;
-      text-decoration: underline;
-      top: 20%;
-      width: 100%; }
-    #main .thumbnail img {
-      height: 100%;
-      width: 100%; }
-    #main .thumbnail a {
-      -webkit-transition: all 0.25s;
-      -moz-transition: all 0.25s;
-      transition: all 0.25s; }
-      #main .thumbnail a:hover {
-        opacity: 0.75; }
 
 #projects-wrapper {
   list-style-type: none;
@@ -165,6 +126,25 @@ header {
   padding: 20px;
   position: relative;
   z-index: 2; }
+  #projects-wrapper #sidebar .desc {
+    float: right;
+    margin: 20px 0; }
+    #projects-wrapper #sidebar .desc h1 {
+      color: black;
+      border-bottom: 1px solid black;
+      font-family: "adagio-slab-medium", serif;
+      font-size: 16.18px;
+      padding: 0.15em 0;
+      margin: 1em 0; }
+    #projects-wrapper #sidebar .desc .text {
+      max-width: 420px; }
+    #projects-wrapper #sidebar .desc .meta {
+      list-style-type: none;
+      margin: 1em 0 0;
+      padding: 0; }
+      #projects-wrapper #sidebar .desc .meta li {
+        display: inline-block;
+        margin-right: 1em; }
   #projects-wrapper #sidebar #meta-desc {
     border-top: 1px solid #e9e9e9;
     line-height: 2em;
@@ -174,30 +154,40 @@ header {
       float: none;
       max-width: 100%;
       text-align: center; } }
-  @media screen and (max-width: 905px) {
-    #projects-wrapper #main-content {
-      max-width: 100%;
-      float: none; } }
-  #projects-wrapper #main-content img {
-    border-bottom: 1px solid #e9e9e9;
-    margin: 10px 0;
-    padding-bottom: 20px;
+
+.thumbnail {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  background: none;
+  border: none;
+  margin: 0;
+  overflow: hidden;
+  padding: 5px;
+  position: relative;
+  width: 100%; }
+  .thumbnail .title {
+    color: black;
+    display: block;
+    font-family: "adagio-slab-black", serif;
+    font-size: 24.27px;
+    font-weight: 700;
+    left: 0;
+    line-height: 1.25em;
+    height: 100%;
+    padding: 15%;
+    position: absolute;
+    text-align: center;
+    text-decoration: underline;
+    top: 20%;
     width: 100%; }
-  #projects-wrapper #main-content .video-container {
-    border-bottom: 1px solid #e9e9e9;
-    margin: 10px 0;
-    padding-bottom: 20px; }
-    #projects-wrapper #main-content .video-container .video-wrapper {
-      position: relative;
-      padding-bottom: 52.25%;
-      padding-top: 25px;
-      height: 0; }
-      #projects-wrapper #main-content .video-container .video-wrapper iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%; }
+  .thumbnail a:hover img {
+    -webkit-transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    transition: all 0.35s;
+    opacity: 0.75; }
 
 #page-wrapper {
   margin: 0 auto;
@@ -207,11 +197,10 @@ header {
   list-style-type: none;
   padding: 0; }
 
-.nextprev {
+.nextprev a {
+  color: black; }
+.nextprev .next {
   float: right; }
-  .nextprev a {
-    font-size: 1.4em;
-    color: black; }
 
 a.goToTop {
   border-bottom: 1px solid transparent;
@@ -224,28 +213,10 @@ a.goToTop {
     border-bottom: 1px solid black;
     text-decoration: none; }
 
-.desc {
-  float: right; }
-  .desc h1 {
-    color: black;
-    font-size: 2rem;
-    font-weight: 600; }
-  .desc .text {
-    max-width: 420px; }
-  .desc .meta {
-    font-size: 0.8em;
-    list-style-type: none;
-    margin: 50px 0 0;
-    padding: 0; }
-    .desc .meta li {
-      display: inline-block;
-      margin-right: 1em; }
-
 /*------------------------------------------------------------------------------
  $4 - Footer
 ------------------------------------------------------------------------------*/
 footer {
-  border-top: 1px solid #e9e9e9;
   color: #262626;
   margin: 10px 0;
   overflow: hidden;
