--- a/assets/css/core.scss
+++ b/assets/css/core.scss
@@ -22,7 +22,7 @@
  $1 - Typography & Colour
 ------------------------------------------------------------------------------*/
 
-$background: #ececec;
+$background: #fff;
 
 $colour-black: #000;
 $colour-grey: tint(black, 15%);
@@ -34,6 +34,7 @@ $carrmen-yellow: #fdef4b;
 $font-size: modular-scale(10px, 1, 1.618);
 $font-display: "adagio-slab-black", serif;
 $font-body: "adagio-slab-medium", serif;
+$size-display: $font-size * 1.5;
 $paragraph-leading: 1.35em;
 $display-leading: 1.25em;
 
@@ -112,20 +113,23 @@ img {
         font-size: 3.2em;
         color: $colour-black;
         padding: 0;
+        margin: 0;
     }
 
     h2 {
         color: $colour-black;
         text-transform: lowercase;
+        margin: 0;
+        padding: 0;
     }
 }
 
 header {
     overflow: hidden;
-    padding: 5px;
+    padding: 20px;
 
     h1 {
-        font-size: 2.4rem;
+        font-size: $size-display;
         float: left;
         padding: 0.025em 0;
         a {
@@ -139,22 +143,16 @@ header {
 
     .menu {
         font-family: $font-body;
-        font-size: 1.3rem;
+        font-size: $font-size;
         float: right;
-        padding: 20px;
         > li {
             display: inline-block;
-            font-size: 1.3em;
             a {
                 color: $colour-black;
                 padding: 0.5em 1em;
             }
         }
     }
-}
-
-#header-wrapper {
-    padding: 20px;
 }
 
 /*------------------------------------------------------------------------------
@@ -170,52 +168,6 @@ header {
     position: relative;
     top: 800px;
     z-index: 2;
-    
-    .thumbnail {
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        background: none;
-        border: none;
-        margin: 0;
-        overflow: hidden;
-        padding: 5px;
-        position: relative;
-        width: 100%;
-
-        .title {
-            color: #fff;
-            display: block;
-            font: {
-                family: $font-display;
-                size: 1.6em;
-                weight: 700;
-            }
-            left: 0;
-            line-height: 1.25em;
-            height: 100%;
-            padding: 15%;
-            position: absolute;
-            text-align: center;
-            text-decoration: underline;
-            top: 20%;
-            width: 100%;
-        }
-
-        img {
-            height: 100%;
-            width: 100%;
-        }
-
-        a {
-            @include transition ( all 0.25s );
-            &:hover {
-                opacity: 0.75;
-            }
-        }
-    }
 }
 
 #projects-wrapper {
@@ -228,6 +180,34 @@ header {
     z-index: 2;
 
     #sidebar {
+        .desc {
+            float: right;
+            margin: 20px 0;
+            
+            h1 {
+                color: $colour-black;
+                border-bottom: 1px solid $colour-black;
+                font-family: $font-body;
+                font-size: $font-size;
+                padding: 0.15em 0;
+                margin: 1em 0;
+            }
+
+            .text {
+                max-width: 420px;
+            }
+
+            .meta {
+                list-style-type: none;
+                margin: 1em 0 0;
+                padding: 0;
+                li {
+                    display: inline-block;
+                    margin-right: 1em;
+                }
+            }
+        }
+
         #meta-desc {
             border-top: 1px solid $colour-mgrey;
             line-height: 2em;
@@ -239,35 +219,45 @@ header {
             text-align: center;
         }
     }
+}
 
-    #main-content {
-        @media screen and (max-width: $break-large) {
-            max-width: 100%;
-            float: none;
+.thumbnail {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    background: none;
+    border: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 5px;
+    position: relative;
+    width: 100%;
+
+    .title {
+        color: $colour-black;
+        display: block;
+        font: {
+            family: $font-display;
+            size: $size-display;
+            weight: 700;
         }
-        img {
-            border-bottom: 1px solid $colour-mgrey;
-            margin: 10px 0;
-            padding-bottom: 20px;
-            width: 100%;
-        }
-        .video-container {
-            border-bottom: 1px solid $colour-mgrey;
-            margin: 10px 0;
-            padding-bottom: 20px;
-            .video-wrapper {
-                position: relative;
-                padding-bottom: 52.25%;
-                padding-top: 25px;
-                height: 0;
-                iframe {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                }
-            }
+        left: 0;
+        line-height: 1.25em;
+        height: 100%;
+        padding: 15%;
+        position: absolute;
+        text-align: center;
+        text-decoration: underline;
+        top: 20%;
+        width: 100%;
+    }
+
+    a {
+        &:hover img {
+            @include transition ( all 0.35s );
+            opacity: 0.75;
         }
     }
 }
@@ -283,10 +273,12 @@ header {
 }
 
 .nextprev {
-    float: right;
     a {
-        font-size: 1.4em;
         color: $colour-black;
+    }
+
+    .next {
+        float: right;
     }
 }
 
@@ -303,37 +295,11 @@ a.goToTop {
     }
 }
 
-.desc {
-    float: right;
-    
-    h1 {
-        color: $colour-black;
-        font-size: 2rem;
-        font-weight: 600;
-    }
-
-    .text {
-        max-width: 420px;
-    }
-
-    .meta {
-        font-size: 0.8em;
-        list-style-type: none;
-        margin: 50px 0 0;
-        padding: 0;
-        li {
-            display: inline-block;
-            margin-right: 1em;
-        }
-    }
-}
-
 /*------------------------------------------------------------------------------
  $4 - Footer
 ------------------------------------------------------------------------------*/
 
 footer {
-    border-top: 1px solid $colour-mgrey;
     color: $colour-grey;
     margin: 10px 0;
     overflow: hidden;
