--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -55,33 +55,33 @@ img {
  $2 - Header and Navigation
 ------------------------------------------------------------------------------*/
 #masthead {
-  overflow: hidden;
-  margin: 0 auto;
-  padding: 275px 0;
+  background-color: #f971c5;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f971c5), color-stop(100%, white));
+  background-image: -webkit-linear-gradient(top, #f971c5, white);
+  background-image: linear-gradient(to bottom,#f971c5, white);
+  height: 100%;
   position: fixed;
   text-align: center;
+  top: -20px;
   width: 100%;
-  z-index: 1;
-  background-color: #fdef4b;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fdef4b), color-stop(100%, white));
-  background-image: -webkit-linear-gradient(top, #fdef4b, white);
-  background-image: linear-gradient(to bottom,#fdef4b, white); }
-  @media screen and (max-width: 768px) {
-    #masthead {
-      padding: 100px 0; } }
-  @media screen and (max-width: 550px) {
-    #masthead {
-      padding: 150px 0; } }
-  #masthead h1 {
-    font-size: 3.2em;
-    color: black;
-    padding: 0;
-    margin: 0; }
-  #masthead h2 {
-    color: black;
-    text-transform: lowercase;
-    margin: 0;
-    padding: 0; }
+  z-index: 1; }
+  #masthead .logo-wrapper {
+    height: 100%;
+    left: 10%;
+    position: absolute;
+    width: 80%;
+    z-index: 2; }
+  #masthead .logo {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px; }
+    #masthead .logo img {
+      width: 100%; }
+    @media screen and (max-width: 768px) {
+      #masthead .logo {
+        top: 25%; } }
 
 header {
   overflow: hidden;
@@ -93,7 +93,7 @@ header {
     header h1 a {
       color: black; }
       header h1 a:hover {
-        color: #fdef4b;
+        color: #f971c5;
         text-decoration: none; }
   header .menu {
     font-family: "adagio-slab-medium", serif;
@@ -108,49 +108,60 @@ header {
 /*------------------------------------------------------------------------------
  $3 - Structure
 ------------------------------------------------------------------------------*/
-#main {
+.masthead-push {
+  margin-top: 1270px; }
+  @media screen and (max-width: 1280px) {
+    .masthead-push {
+      margin-top: 670px; } }
+  @media screen and (max-width: 768px) {
+    .masthead-push {
+      margin-top: 520px; } }
+
+#wrapper {
+  background: #fff;
+  position: relative;
+  z-index: 3; }
+
+#projects {
   background: #fff;
   list-style-type: none;
   overflow: hidden;
   margin: 0 auto;
-  padding: 20px;
   position: relative;
-  top: 800px;
-  z-index: 2; }
+  z-index: 3; }
 
-#projects-wrapper {
+#content-wrapper {
   list-style-type: none;
   overflow: hidden;
   margin: 0 auto;
-  max-width: 960px;
-  padding: 20px;
+  max-width: 1024px;
   position: relative;
   z-index: 2; }
-  #projects-wrapper #sidebar .desc {
+  #content-wrapper #sidebar .desc {
     float: right;
     margin: 20px 0; }
-    #projects-wrapper #sidebar .desc h1 {
+    #content-wrapper #sidebar .desc h1 {
       color: black;
       border-bottom: 1px solid black;
       font-family: "adagio-slab-medium", serif;
       font-size: 16.18px;
       padding: 0.15em 0;
       margin: 1em 0; }
-    #projects-wrapper #sidebar .desc .text {
+    #content-wrapper #sidebar .desc .text {
       max-width: 420px; }
-    #projects-wrapper #sidebar .desc .meta {
+    #content-wrapper #sidebar .desc .meta {
       list-style-type: none;
       margin: 1em 0 0;
       padding: 0; }
-      #projects-wrapper #sidebar .desc .meta li {
+      #content-wrapper #sidebar .desc .meta li {
         display: inline-block;
         margin-right: 1em; }
-  #projects-wrapper #sidebar #meta-desc {
+  #content-wrapper #sidebar #meta-desc {
     border-top: 1px solid #e9e9e9;
     line-height: 2em;
     padding: 1em 0; }
-  @media screen and (max-width: 905px) {
-    #projects-wrapper #sidebar {
+  @media screen and (max-width: 960px) {
+    #content-wrapper #sidebar {
       float: none;
       max-width: 100%;
       text-align: center; } }
@@ -175,13 +186,11 @@ header {
     font-size: 24.27px;
     font-weight: 700;
     left: 0;
+    bottom: 0;
     line-height: 1.25em;
-    height: 100%;
-    padding: 15%;
+    padding: 2%;
     position: absolute;
-    text-align: center;
     text-decoration: underline;
-    top: 20%;
     width: 100%; }
   .thumbnail a:hover img {
     -webkit-transition: all 0.35s;
