--- a/assets/css/core.scss
+++ b/assets/css/core.scss
@@ -29,7 +29,7 @@ $colour-grey: tint(black, 15%);
 $colour-mgrey: tint($colour-grey, 90%);
 $colour-lgrey: tint($colour-grey, 60%);
 $colour-aqua: #45c1b9;
-$carrmen-yellow: #fdef4b;
+$carrmen-pink: #f971c5;
 
 $font-size: modular-scale(10px, 1, 1.618);
 $font-display: "adagio-slab-black", serif;
@@ -38,12 +38,13 @@ $size-display: $font-size * 1.5;
 $paragraph-leading: 1.35em;
 $display-leading: 1.25em;
 
-$resolution: 720px;
+$resolution: 1024px;
 
 $break-tiny: 420px;
 $break-small: 550px;
 $break-medium: 768px;
-$break-large: 905px;
+$break-large: 960px;
+$break-huge: 1280px;
 
 body {
     background: $background;
@@ -94,33 +95,33 @@ img {
 ------------------------------------------------------------------------------*/
 
 #masthead {
-    overflow: hidden;
-    margin: 0 auto;
-    padding: 275px 0;
+    @include linear-gradient(to bottom, $carrmen-pink, white);
+    height: 100%;
     position: fixed;
     text-align: center;
+    top: -20px;
     width: 100%;
     z-index: 1;
-    @include linear-gradient(to bottom, $carrmen-yellow, white);
-    @media screen and (max-width: $break-medium) {
-        padding: 100px 0;
+    .logo-wrapper {
+        height: 100%;
+        left: 10%;
+        position: absolute;
+        width: 80%;
+        z-index: 2;
     }
-    @media screen and (max-width: $break-small) {
-        padding: 150px 0;
-    }
+    .logo {
+        position: relative;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 450px;
+        img {
+            width: 100%;
+        }
 
-    h1 {
-        font-size: 3.2em;
-        color: $colour-black;
-        padding: 0;
-        margin: 0;
-    }
-
-    h2 {
-        color: $colour-black;
-        text-transform: lowercase;
-        margin: 0;
-        padding: 0;
+        @media screen and (max-width: $break-medium) {
+            top: 25%;
+        }
     }
 }
 
@@ -135,7 +136,7 @@ header {
         a {
             color: $colour-black;
             &:hover {
-                color: $carrmen-yellow;
+                color: $carrmen-pink;
                 text-decoration: none;
             }
         }
@@ -159,23 +160,38 @@ header {
  $3 - Structure
 ------------------------------------------------------------------------------*/
 
-#main {
+.masthead-push {
+    margin-top: 1270px;
+
+    @media screen and (max-width: $break-huge) {
+        margin-top: 670px;
+    }
+
+    @media screen and (max-width: $break-medium) {
+        margin-top: 520px;
+    }
+}
+
+#wrapper {
+    background: #fff;
+    position: relative;
+    z-index: 3;
+}
+
+#projects {
     background: #fff;
     list-style-type: none;
     overflow: hidden;
     margin: 0 auto;
-    padding: 20px;
     position: relative;
-    top: 800px;
-    z-index: 2;
+    z-index: 3;
 }
 
-#projects-wrapper {
+#content-wrapper {
     list-style-type: none;
     overflow: hidden;
     margin: 0 auto;
-    max-width: 960px;
-    padding: 20px;
+    max-width: $resolution;
     position: relative;
     z-index: 2;
 
@@ -244,13 +260,11 @@ header {
             weight: 700;
         }
         left: 0;
+        bottom: 0;
         line-height: 1.25em;
-        height: 100%;
-        padding: 15%;
+        padding: 2%;
         position: absolute;
-        text-align: center;
         text-decoration: underline;
-        top: 20%;
         width: 100%;
     }
 
