--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -55,10 +55,7 @@ img {
  $2 - Header and Navigation
 ------------------------------------------------------------------------------*/
 #masthead {
-  background-color: #f971c5;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f971c5), color-stop(100%, white));
-  background-image: -webkit-linear-gradient(top, #f971c5, white);
-  background-image: linear-gradient(to bottom,#f971c5, white);
+  background: #f971c5;
   height: 100%;
   position: fixed;
   text-align: center;
@@ -76,7 +73,7 @@ img {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    max-width: 450px; }
+    max-width: 320px; }
     #masthead .logo img {
       width: 100%; }
     @media screen and (max-width: 768px) {
@@ -211,14 +208,12 @@ header {
 .nextprev .next {
   float: right; }
 
-a.goToTop {
+.scrollToTop {
   border-bottom: 1px solid transparent;
   color: #262626;
   display: inline-block;
-  margin: 20px 0;
-  position: relative;
-  z-index: 9999; }
-  a.goToTop:hover {
+  margin: 20px 0; }
+  .scrollToTop:hover {
     border-bottom: 1px solid black;
     text-decoration: none; }
 
