--- a/assets/css/core.scss
+++ b/assets/css/core.scss
@@ -118,8 +118,14 @@ img {
         img {
             width: 100%;
         }
+        @media screen and (max-width: $break-huge) {
+            top: 48%;
+        }
         @media screen and (max-width: $break-medium) {
-            top: 25%;
+            top: 40%;
+        }
+        @media screen and (max-width: $break-small) {
+            top: 50%;
         }
     }
 }
