--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -89,10 +89,16 @@ img {
 header {
   overflow: hidden;
   padding: 20px; }
+  @media screen and (max-width: 550px) {
+    header {
+      text-align: center; } }
   header h1 {
     font-size: 24.27px;
     float: left;
     padding: 0.025em 0; }
+    @media screen and (max-width: 550px) {
+      header h1 {
+        float: none; } }
     header h1 a {
       color: black; }
       header h1 a:hover {
@@ -101,7 +107,12 @@ header {
   header .menu {
     font-family: "adagio-slab-medium", serif;
     font-size: 16.18px;
-    float: right; }
+    float: right;
+    margin: 0;
+    padding: 0; }
+    @media screen and (max-width: 550px) {
+      header .menu {
+        float: none; } }
     header .menu > li {
       display: inline-block; }
       header .menu > li a {
@@ -122,6 +133,7 @@ header {
 
 #wrapper {
   background: #fff;
+  padding: 20px;
   position: relative;
   z-index: 3; }
 
@@ -142,10 +154,17 @@ header {
   z-index: 2; }
   #content-wrapper #sidebar .desc {
     float: right;
-    margin: 20px 0; }
+    margin: 20px 0;
+    max-width: 320px;
+    width: 100%; }
+    @media screen and (max-width: 960px) {
+      #content-wrapper #sidebar .desc {
+        float: none;
+        max-width: 100%; } }
     #content-wrapper #sidebar .desc h1 {
-      color: black;
       border-bottom: 1px solid black;
+      color: black;
+      display: inline-block;
       font-family: "adagio-slab-medium", serif;
       font-size: 16.18px;
       padding: 0.15em 0;
@@ -163,11 +182,6 @@ header {
     border-top: 1px solid #e9e9e9;
     line-height: 2em;
     padding: 1em 0; }
-  @media screen and (max-width: 960px) {
-    #content-wrapper #sidebar {
-      float: none;
-      max-width: 100%;
-      text-align: center; } }
 
 .thumbnail {
   -webkit-box-sizing: border-box;
@@ -186,7 +200,7 @@ header {
     color: black;
     display: block;
     font-family: "adagio-slab-black", serif;
-    font-size: 24.27px;
+    font-size: 19.416px;
     font-weight: 700;
     left: 0;
     bottom: 0;
